# pypackage-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: packaging.yml
src/pyarmm/: __init__.py
src/pyarmm/armmodel/: __init__.py
test/: test_armmodel.py
